--- a/author.yaml
+++ b/author.yaml
@@ -1,4 +1,5 @@
 author:
-  firstname: "YOUR"
-  lastname: "NAME"
-  email: "YOURNAME@example.com"
+  firstname: "Rajendra"
+  lastname: "Behera"
+  email: "rbehera@mail.yu.edu"
+  
